# moqentra

./: .dockerignore  .gitignore  .tmp_pr33_body.md  .tmp_pr_body_task20.md  Cargo.toml  clippy.toml  deny.toml  docker-compose.test.yml  package.json  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: ci-staged.yml  ci.yml  hardware-ci.yml
apps/control-plane/: Cargo.toml
apps/control-plane/src/: artifact_validator.rs  main.rs
apps/desktop/: package.json
apps/dyun-agent/: Cargo.toml  dyun-manifest.json
apps/dyun-agent/src/: main.rs
apps/node-agent/: Cargo.toml
apps/node-agent/src/: client.rs  main.rs
apps/scheduler/: Cargo.toml
apps/scheduler/src/: main.rs  pg.rs
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
artifacts/r1-evidence/: README.md
baseline/: README.md  external-blockers.toml  hardware-support.toml  licenses.toml  platform-matrix.toml  release-policy.md  version-matrix.toml
crates/application/: Cargo.toml
crates/application/src/: annotation_svc.rs  approval_svc.rs  checkpoint_svc.rs  coco.rs  conversion_svc.rs  dispatch.rs  hardware_svc.rs  labelu.rs  lib.rs  model_svc.rs  platform.rs  ports.rs  queue_svc.rs  quota_svc.rs  resource_class_svc.rs  training_svc.rs
crates/auth/: Cargo.toml
crates/auth/src/: audit.rs  identity.rs  jwt.rs  lib.rs  oidc.rs  rbac.rs  role_store.rs  secrets.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: lib.rs
crates/desktop/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: annotation.rs  application.rs  approval.rs  checkpoint_manifest.rs  conversion.rs  dataset.rs  export.rs  hardware.rs  import.rs  inference.rs  lib.rs  model_registry.rs  pipeline.rs  quality.rs  queue.rs  quota.rs  resource_class.rs  training.rs
crates/dyun-adapter/: Cargo.toml
crates/http-api/: Cargo.toml
crates/http-api/src/: annotation.rs  control_plane.rs  gc_worker.rs  import.rs  lib.rs  northbound.rs  pg_stores.rs  reconciler_worker.rs  validation_worker.rs  worker_runtime.rs
crates/k8s-executor/: Cargo.toml
crates/k8s-executor/src/: lib.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: key.rs  lib.rs  memory.rs  s3.rs  upload_session.rs  validation.rs
crates/observability/: Cargo.toml
crates/observability/src/: context.rs  health.rs  lib.rs  metrics.rs  sanitize.rs
crates/openapi-types/: Cargo.toml
crates/openapi-types/src/: lib.rs
crates/openapi-types/src/moqentra_api/: mod.rs  types.rs
crates/release-manager/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/scheduler/src/: distributed.rs  lib.rs  reconciler.rs  scheduler.rs  session.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_init_resources.sql  0003_outbox_lease.sql  0004_idempotency_admin.sql  0005_idempotency_id.sql  0006_audit_logs.sql  0007_dataset_version_state.sql  0008_training_jobs_experiment_id.sql  0009_annotation_projects_columns.sql  0010_model_version_columns.sql  0011_application_metadata.sql  0012_audit_logs_columns.sql  0013_training_jobs_scheduler_rls.sql  0014_conversion_and_evaluation.sql  0015_admin_bypass_outbox_datasets.sql  0016_experiments_upload_import.sql  0017_admin_annotation_conversion.sql  0018_r2_contracts.sql
crates/storage/src/: idempotency.rs  lib.rs  outbox.rs  pg_audit.rs  pg_idempotency.rs  pg_outbox.rs  pg_role_store.rs  pool.rs  unit_of_work.rs
crates/storage/src/repositories/: annotation.rs  application.rs  conversion.rs  dataset.rs  deployment.rs  mod.rs  model.rs  training_job.rs
crates/test-harness/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: config.rs  error.rs  id.rs  lib.rs  pagination.rs  request.rs  time.rs  validation.rs
crates/worker-control/: Cargo.toml
crates/worker-control/src/: lib.rs  local_executor.rs  session.rs
deploy/compose/: docker-compose.yml
deploy/docker/: Dockerfile.rust  Dockerfile.web  Dockerfile.worker  nginx.conf
deploy/kubernetes/: namespace.yaml  pod-security.yaml
deploy/observability/: alerts.yaml  dashboard-r1.json
deploy/onebox/: .env.example  README.md  backup.sh  docker-compose.yml  init.sh  oidc-config.yaml  preflight.sh  restore.sh  smoke.sh  verify-backup.sh
dev-docs/002_vibe_coding_plan/: 01_execution_contract_and_baseline.md  02_product_scope_release_phases.md  03_monorepo_bootstrap_and_ci.md  04_architecture_crate_and_service_graph.md  05_foundation_types_errors_config.md  06_api_proto_specs_and_codegen.md  07_multitenancy_identity_rbac_and_audit.md  08_postgresql_storage_outbox_and_idempotency.md  09_object_storage_dataset_ingestion_and_versioning.md  10_annotation_platform_and_labelu_kit.md  11_data_quality_auto_annotation_and_multimodal.md  12_experiment_and_training_domain.md  13_python_grpc_worker_sdk.md  14_local_executor_and_node_agent.md  15_kubernetes_volcano_and_heterogeneous_scheduler.md  16_distributed_training_checkpoint_and_recovery.md  17_model_registry_artifacts_and_lineage.md  18_model_conversion_evaluation_and_promotion.md  19_pipeline_hpo_and_notebook_services.md  20_application_orchestration_and_compiler.md  21_dyun_agent_and_graph_runtime.md  (+11 more)
docs/: acceptance-scenarios.md  admission-process.md  architecture.md  capability-tracking.md  product-scope.md  release-notes-template.md  system-design.md  user-journeys.md
proto/: buf.gen.yaml  buf.yaml
python/moqentra_worker/: pyproject.toml
python/moqentra_worker/src/moqentra/common/v1/: common_pb2.py  common_pb2_grpc.py
python/moqentra_worker/src/moqentra/worker/v1/: worker_pb2.py  worker_pb2_grpc.py
python/moqentra_worker/src/moqentra_worker/: __init__.py  fixtures.py  grpc_client.py  onnx_validation.py  sdk.py
python/moqentra_worker/src/moqentra_worker/templates/: __init__.py  classification.py  common.py  detection.py  segmentation.py
python/moqentra_worker/tests/: test_fixtures.py  test_sdk.py  test_templates.py
security/: threat-model.md
tools/: check_crate_graph.py  crate_graph_rules.json  generate-api-clients.sh  generate-release-manifest.py  generate-sbom.sh  run-rust-qa.sh  verify-api-clients.sh
(+269 files in other folders)
