[workspace]
members = [
  "crates/*",
  "apps/control-plane",
  "apps/scheduler",
  "apps/node-agent",
  "apps/dyun-agent",
]

resolver = "3"

[workspace.metadata.k8s]
baseline = "v1.30"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Moqentra Authors"]
license = "Apache-2.0"
repository = "https://github.com/dodojohn83/moqentra"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tonic = "0.13"
tonic-build = "0.13"
tokio-stream = "0.1"
async-stream = "0.3"
