[package]
name = "moqentra-dyun-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moqentra-dyun-agent"
path = "src/main.rs"

[dependencies]
moqentra-types = { path = "../../crates/types" }
moqentra-dyun-adapter = { path = "../../crates/dyun-adapter" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
