[package]
name = "moqentra-scheduler-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moqentra-scheduler"
path = "src/main.rs"

[dependencies]
moqentra-types = { path = "../../crates/types" }
moqentra-scheduler = { path = "../../crates/scheduler" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
