[package]
name = "moqentra-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
