[package]
name = "moqentra-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
jsonwebtoken = "9"
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
moqentra-types = { path = "../types" }
