[package]
name = "moqentra-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
moqentra-types = { path = "../types" }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.2"
