[package]
name = "moqentra-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
moqentra-types = { path = "../types" }
prost = "0.13"
prost-types = "0.13"
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3.2"
