[package]
name = "moqentra-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-contracts = { path = "../contracts" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
moqentra-types = { path = "../types" }
