[package]
name = "moqentra-http-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
moqentra-application = { path = "../application" }
serde = { workspace = true }
serde_json = "1.0"
