[package]
name = "moqentra-http-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
moqentra-application = { path = "../application" }
moqentra-auth = { path = "../auth" }
moqentra-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = "1.0"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
url = "2"
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
jsonwebtoken = "9"
