[package]
name = "moqentra-k8s-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
moqentra-scheduler = { path = "../scheduler" }
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
