[package]
name = "moqentra-object-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.10"
sha2 = "0.10"
aws-config = "1.6"
aws-sdk-s3 = "1.70"
aws-credential-types = "1.2"

image = "0.25"

[dev-dependencies]
tokio = { workspace = true }
