[package]
name = "moqentra-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
