[package]
name = "moqentra-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
tracing = { workspace = true }
async-trait = "0.1"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
