[package]
name = "moqentra-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-domain = { path = "../domain" }
serde = { workspace = true }
serde_json = "1.0"
time = "0.3"
