[package]
name = "moqentra-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moqentra-migrate"
path = "src/bin/migrate.rs"

[dependencies]
moqentra-types = { path = "../types" }
moqentra-auth = { path = "../auth" }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
time = "0.3"
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "time", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true }
