[package]
name = "moqentra-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
http = "1.3"

config = "0.15"
tracing = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.19"
