[package]
name = "moqentra-worker-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moqentra-types = { path = "../types" }
moqentra-contracts = { path = "../contracts" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = "0.1"
tokio-stream = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
