[project]
name = "moqentra-worker"
version = "0.1.0"
description = "Moqentra Python gRPC worker SDK"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.71.0",
  "protobuf>=6.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/moqentra"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^src/moqentra"]

[[tool.mypy.overrides]]
module = ["grpc", "moqentra.*"]
ignore_missing_imports = true
